--- a/public/answer.html
+++ b/public/answer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hello There Website">
-    <title>Answer This</title>
+    <title>Hello there!</title>
     <link rel="stylesheet" href="../dist/output.css">
 </head>
 <body class="bg-main flex flex-col items-center">
@@ -17,7 +17,7 @@
                 <button onclick="resultToggle()"> &#x2715; </button>
             </div>
             <hr>
-            <p class="font-light text-lg break-all">Well, give me your number then</p>
+            <p id="bodyResult" class="font-light text-lg break-all">Well, give me your number then</p>
         </div>
     </div>
 
@@ -32,17 +32,18 @@
         <main class="font-main px-4 sm:px-0 flex flex-col h-[80vh] justify-center">
             <!-- QUESTION -->
             <div class="min-h-[20rem] flex justify-center items-center text-center break-words py-8">
-                <p class="text-white font-bold text-3xl">I like you, would you like to be my-</p>
+                <p id="pertanyaan" class="text-white font-bold text-3xl">I like you, would you like to be my-</p>
             </div>
 
             <!-- OPTIONS -->
             <div class="flex justify-between">
                 <button 
+                    id="benar"
                     class="w-[46%] bg-secondary hover:brightness-150 transition duration-100 ease-in-out flex justify-center items-center aspect-video rounded-md text-white font-bold text-xl h-[6rem]"
                     onclick="resultToggle()">
                     Yes
                 </button>
-                <button 
+                <button
                     class="w-[46%] h-[6rem] bg-secondary hover:brightness-150 transition duration-100 ease-in-out flex justify-center items-center aspect-video rounded-md text-white font-bold text-xl absolute right-4"
                     id="falseAnswer"
                     onclick="changePosition('falseAnswer')">
@@ -53,5 +54,20 @@
     </section>
 
     <script src="./js/main.js"></script>
+    
+    <script>
+        const urlParams = new URLSearchParams(window.location.search);
+        const pertanyaan = urlParams.get('p');
+        const benar = urlParams.get('b');
+        const salah = urlParams.get('s');
+        const header = urlParams.get('h');
+        const body = urlParams.get('r');
+
+        document.getElementById("pertanyaan").innerHTML = pertanyaan;
+        document.getElementById("benar").innerHTML = benar;
+        document.getElementById("falseAnswer").innerHTML = salah;
+        document.getElementById("resultHead").innerHTML = header;
+        document.getElementById("bodyResult").innerHTML = body;
+    </script>
 </body>
 </html>
