--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         }
 
         function genereteLink(){
-            const path = window.location.hostname;
+            const path = window.location.pathname;
 
             var pertanyaan = document.getElementById("question").value;
             var benar = document.getElementById("yes").value;
