--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,6 @@
                             maxlength="10"
                             aria-label="Yes"
                             class="w-[49%] h-12 bg-secondary flex items-center px-4 py-2 text-xl text-white rounded-md"
-                            oninput="updateText('yes', 'valueYes')"
                             >
                         <input 
                             type="text" 
@@ -77,17 +76,16 @@
                             maxlength="10"
                             aria-label="No"
                             class="w-[49%] h-12 bg-secondary flex items-center px-4 py-2 text-xl text-white rounded-md"
-                            oninput="updateText('no', 'valueNo')"
                             >
                     </div>
 
                     <div class="flex justify-between">
                         <div class="w-[49%] h-24 bg-secondary brightness-150 flex justify-center rounded-md items-center px-4 py-2 text-xl text-white aspect-auto">
-                            <p id="valueYes">Yes</p>
+                            <p>True</p>
                         </div>
 
                         <div class="w-[49%] h-24 bg-secondary brightness-150 flex justify-center rounded-md items-center px-4 py-2 text-xl text-white aspect-auto">
-                            <p id="valueNo">No</p>
+                            <p>False</p>
                         </div>
                     </div>
                 </div>
