Front End Update

--- a/answer.html
+++ b/answer.html
@@ -21,9 +21,9 @@
         </div>
     </div>
 
-    <header class="bg-white h-[10vh] w-full">
+    <header class="bg-input h-[15vh] sm:h-[10vh] w-full">
         <nav class="flex h-full w-full items-center justify-center">
-            <p class="font-header font-bold text-4xl text-main">Hello there!</p>
+            <p class="font-header font-bold text-4xl text-white">Hello there!</p>
         </nav>
     </header>
 
@@ -39,12 +39,12 @@
             <div class="flex justify-between">
                 <button 
                     id="benar"
-                    class="w-[46%] bg-secondary hover:brightness-150 transition duration-100 ease-in-out flex justify-center items-center aspect-video rounded-md text-white font-bold text-xl h-[6rem]"
+                    class="w-[46%] bg-input border border-border hover:brightness-150 transition duration-100 ease-in-out flex justify-center items-center aspect-video rounded-md text-white font-bold text-xl h-[6rem]"
                     onclick="resultToggle()">
                     Yes
                 </button>
                 <button
-                    class="w-[46%] h-[6rem] bg-secondary hover:brightness-150 transition duration-100 ease-in-out flex justify-center items-center aspect-video rounded-md text-white font-bold text-xl absolute right-4"
+                    class="w-[46%] h-[6rem] bg-input border border-border hover:brightness-150 transition duration-100 ease-in-out flex justify-center items-center aspect-video rounded-md text-white font-bold text-xl absolute right-4"
                     id="falseAnswer"
                     onclick="changePosition('falseAnswer')">
                     No
