--- a/index.html
+++ b/index.html
@@ -132,6 +132,22 @@
                             <p class="text-end text-gray-300" id="resultBodyCount">30/100</p>
                         </div>
                     </div>
+
+                    <div class="flex flex-col gap-2">
+                        <label for="image" class="w-full h-8 bg-input border border-border flex justify-center items-center py-6 rounded-md cursor-pointer">
+                          <input 
+                            type="file" 
+                            name="image" 
+                            id="image" 
+                            class="hidden" 
+                            onchange="displayFileName()" 
+                            accept=".jpg, .jpeg, .png, .webp"
+                            >
+                          <p class="font-semibold text-white ">Add Image (Optional)</p>
+                        </label>
+
+                        <p id="fileName" class="text-blue break-all"></p>
+                    </div>
                 </div>
                 <!-- RESULT ENDS -->
 
