Front End Commit

--- a/answer.html
+++ b/answer.html
@@ -11,7 +11,7 @@
 
     <!-- POPUP -->
     <div class="fixed z-10 top-0 left-0 w-screen h-screen backdrop-brightness-75 flex justify-center items-center hidden" id="popup">
-        <div class="w-full mx-4 sm:mx-0 sm:w-[30rem] bg-secondary brightness-150 aspect-video rounded-md text-white p-4 flex flex-col gap-4">
+        <div class="w-full mx-4 sm:mx-0 sm:w-[30rem] bg-input brightness-150 aspect-video rounded-md text-white p-4 flex flex-col gap-4">
             <div class="flex justify-between font-medium text-lg">
                 <p id="resultHead">Hooray</p>
                 <button onclick="resultToggle()"> &#x2715; </button>
