--- a/answer.html
+++ b/answer.html
@@ -56,18 +56,18 @@
     <script src="public/js/main.js"></script>
     
     <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const pertanyaan = urlParams.get('p');
-        const benar = urlParams.get('b');
-        const salah = urlParams.get('s');
-        const header = urlParams.get('h');
-        const body = urlParams.get('r');
+        // const urlParams = new URLSearchParams(window.location.search);
+        // const pertanyaan = urlParams.get('p');
+        // const benar = urlParams.get('b');
+        // const salah = urlParams.get('s');
+        // const header = urlParams.get('h');
+        // const body = urlParams.get('r');
 
-        document.getElementById("pertanyaan").innerHTML = pertanyaan;
-        document.getElementById("benar").innerHTML = benar;
-        document.getElementById("falseAnswer").innerHTML = salah;
-        document.getElementById("resultHead").innerHTML = header;
-        document.getElementById("bodyResult").innerHTML = body;
+        // document.getElementById("pertanyaan").innerHTML = pertanyaan;
+        // document.getElementById("benar").innerHTML = benar;
+        // document.getElementById("falseAnswer").innerHTML = salah;
+        // document.getElementById("resultHead").innerHTML = header;
+        // document.getElementById("bodyResult").innerHTML = body;
     </script>
 </body>
 </html>
