--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                           <p class="font-semibold text-white ">Add Image (Optional)</p>
                         </label>
 
-                        <p id="fileName" class="text-blue break-all"></p>
+                        <div class="flex justify-between w-full">
+                            <p id="fileName" class="text-blue break-all"></p>
+                            <p class="text-gray-300">jpg, jpeg, png, webp</p>
+                        </div>
                     </div>
                 </div>
                 <!-- QUESTION ENDS -->
@@ -212,12 +215,14 @@
             if (pertanyaan.length < 10){
                 document.getElementById("question").classList.add("border-2");
                 document.getElementById("question").classList.add("border-blue");
+                document.getElementById("question").classList.remove("border-border");
                 document.getElementById("questionContainer").classList.add("shadow-[0_20px_80px_rgba(8,_112,_184,_0.7)]");
                 document.getElementById("errorQuestion").innerHTML = "min 10 characters";
                 document.getElementById("questionHeader").focus();
             }else{
                 document.getElementById("question").classList.remove("border-2");
                 document.getElementById("question").classList.remove("border-blue");
+                document.getElementById("question").classList.add("border-border");
                 document.getElementById("questionContainer").classList.remove("shadow-[0_20px_80px_rgba(8,_112,_184,_0.7)]");
                 document.getElementById("errorQuestion").innerHTML = "";
             }
@@ -227,11 +232,13 @@
             if (benar.length < 2){
                 document.getElementById("yes").classList.add("border-2");
                 document.getElementById("yes").classList.add("border-blue");
+                document.getElementById("yes").classList.remove("border-border");
                 document.getElementById("answerContainer").classList.add("shadow-[0_20px_80px_rgba(8,_112,_184,_0.7)]");
                 document.getElementById("answerHeader").focus();
             }else{
                 document.getElementById("yes").classList.remove("border-2");
                 document.getElementById("yes").classList.remove("border-blue");
+                document.getElementById("yes").classList.add("border-border");
                 document.getElementById("answerContainer").classList.remove("shadow-[0_20px_80px_rgba(8,_112,_184,_0.7)]");
             }
             // akhir validasi yes
@@ -240,11 +247,13 @@
             if (salah.length < 2){
                 document.getElementById("no").classList.add("border-2");
                 document.getElementById("no").classList.add("border-blue");
+                document.getElementById("no").classList.remove("border-border");
                 document.getElementById("answerContainer").classList.add("shadow-[0_20px_80px_rgba(8,_112,_184,_0.7)]");
                 document.getElementById("answerHeader").focus();
             }else{
                 document.getElementById("no").classList.remove("border-2");
                 document.getElementById("no").classList.remove("border-blue");
+                document.getElementById("no").classList.add("border-border");
                 document.getElementById("answerContainer").classList.remove("shadow-[0_20px_80px_rgba(8,_112,_184,_0.7)]");
             }
             // akhir validasi no
@@ -253,12 +262,14 @@
             if (header.length < 2){
                 document.getElementById("result").classList.add("border-2");
                 document.getElementById("result").classList.add("border-blue");
+                document.getElementById("result").classList.remove("border-border");
                 document.getElementById("errorResult").innerHTML = "min 2 characters";
                 document.getElementById("resultContainer").classList.add("shadow-[0_20px_80px_rgba(8,_112,_184,_0.7)]");
                 document.getElementById("resultHeader").focus();
             }else{
                 document.getElementById("result").classList.remove("border-2");
                 document.getElementById("result").classList.remove("border-blue");
+                document.getElementById("result").classList.add("border-border");
                 document.getElementById("errorResult").innerHTML = "";
             }
             // akhir validasi result
@@ -267,12 +278,14 @@
             if (resultBody.length < 2){
                 document.getElementById("resultBody").classList.add("border-2");
                 document.getElementById("resultBody").classList.add("border-blue");
+                document.getElementById("resultBody").classList.remove("border-border");
                 document.getElementById("errorResultBody").innerHTML = "min 2 characters";
                 document.getElementById("resultContainer").classList.add("shadow-[0_20px_80px_rgba(8,_112,_184,_0.7)]");
                 document.getElementById("resultHeader").focus();
             }else{
                 document.getElementById("resultBody").classList.remove("border-2");
                 document.getElementById("resultBody").classList.remove("border-blue");
+                document.getElementById("resultBody").classList.add("border-border");
                 document.getElementById("errorResultBody").innerHTML = "";
             }
             // akhir validasi result body
