--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
                         <p class="text-blue" id="errorQuestion"></p>
                         <p class="text-end text-gray-300" id="questionCount">0/100</p>
                     </div>
-
-                    <div class="flex flex-col gap-2">
+                    
+                    <!-- IMAGE -->
+                    <!-- <div class="flex flex-col gap-2">
                         <label for="image" class="w-full h-8 bg-input border border-border flex justify-center items-center py-6 rounded-md cursor-pointer hover:brightness-110 ease-in-out transition duration-200">
                           <input 
                             type="file" 
@@ -63,7 +64,7 @@
                             <p id="fileName" class="text-blue break-all"></p>
                             <p class="text-gray-300">jpg, jpeg, png, webp</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- QUESTION ENDS -->
 
