style: adding small adjustment

--- a/answer.html
+++ b/answer.html
@@ -19,7 +19,7 @@
             </div>
             <hr>
             <!-- <p id="bodyResult" class="font-light text-lg break-all">Well, give me your number then</p> -->
-            <p id="bodyResult" class="font-light text-lg break-all"></p>
+            <p id="bodyResult" class="text-lg break-all"></p>
         </div>
     </div>
 
@@ -30,7 +30,14 @@
     </header>
 
     <section class="w-screen sm:w-[40rem] h-fit pb-8 relative">
-
+        <div class="flex justify-center items-center h-16">
+            <p class="text-center text-white">
+                made by 
+                <a class="text-blue font-semibold hover:underline" target="_blank" href="https://instagram.com/rrreyabd">rrreyabd</a> 
+                and 
+                <a class="text-blue font-semibold hover:underline" target="_blank" href="https://instagram.com/winz.liu">winz.liu</a> 
+            </p>
+        </div>
         <main class="font-main px-4 sm:px-0 flex flex-col h-[80vh] justify-center">
             <!-- QUESTION -->
             <div class="min-h-[20rem] flex justify-center items-center text-center break-words py-8">
