--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
                             id="result"
                             minlength="2"
                             maxlength="10"
-                            value="Header"
-                            placeholder="Header"
+                            placeholder="Yeayyy!"
                             aria-label="Result Head"
                             class="h-12 bg-input border border-border flex items-center px-4 py-2 text-xl text-white rounded-md"
                             oninput="countCharacters('result', 'resultCount') + updateText('result', 'resultHead')"
@@ -124,7 +123,6 @@
                             minlength="2"
                             maxlength="100"
                             aria-label="Result Body"
-                            value="Message"
                             placeholder="Message"
                             class="h-12 w-full bg-input border border-border px-4 py-2 text-xl text-white rounded-md resize-none text-start break-all"
                             oninput="countCharacters('resultBody', 'resultBodyCount') + updateText('resultBody', 'resultBodyText')">
