style: adding small adjustment

--- a/answer.html
+++ b/answer.html
@@ -23,21 +23,13 @@
         </div>
     </div>
 
-    <header class="bg-input h-[15vh] sm:h-[10vh] w-full">
+    <header class="bg-input h-[15vh] sm:h-[10vh] w-full fixed">
         <nav class="flex h-full w-full items-center justify-center">
             <p class="font-header font-bold text-4xl text-white">Hello there!</p>
         </nav>
     </header>
 
-    <section class="w-screen sm:w-[40rem] h-fit pb-8 relative">
-        <div class="flex justify-center items-center h-16">
-            <p class="text-center text-white">
-                made by 
-                <a class="text-blue font-semibold hover:underline" target="_blank" href="https://instagram.com/rrreyabd">rrreyabd</a> 
-                and 
-                <a class="text-blue font-semibold hover:underline" target="_blank" href="https://instagram.com/winz.liu">winz.liu</a> 
-            </p>
-        </div>
+    <section class="w-screen sm:w-[40rem] h-screen pb-8 relative flex flex-col justify-between">
         <main class="font-main px-4 sm:px-0 flex flex-col h-[80vh] justify-center">
             <!-- QUESTION -->
             <div class="min-h-[20rem] flex justify-center items-center text-center break-words py-8">
@@ -61,6 +53,15 @@
                 </button>
             </div>
         </main>
+
+        <div class="flex justify-center items-center h-16">
+            <p class="text-center text-white">
+                made by 
+                <a class="text-blue font-semibold hover:underline" target="_blank" href="https://instagram.com/rrreyabd">rrreyabd</a> 
+                and 
+                <a class="text-blue font-semibold hover:underline" target="_blank" href="https://instagram.com/winz.liu">winz.liu</a> 
+            </p>
+        </div>
     </section>
 
     <script src="public/js/main.js"></script>
